For 1.20.2
	- Javascript "initialize()" - if parsing was required (eg, createVrmlFromString)
	  a thread lock would happen. Initialize() call moved out of parse thread to 
	  the callers thread.

	- SphereSensor, PlaneSensor, TouchSensor, CylinderSensor; on Linux, these
	  nodes would continuously send "_changed" events when the nodes were active;
	  now only sends events when values change (and, node is active)

	- ConsoleMessage had a potential memory overrun on large messages; messages
	  truncated if too large.

	- Many, many Javascript changes, especially around SFNode and MFNode implementations.

	- cleanup OSX build; remove redundant installed code from dmg.

	- comment out movie-snapshot code, pending rethink.

	- OSX running within Safari; speaking error messages sometimes hung safari; use
	  "freewrlSystem" call now, instead of "system" - seems to work well. Messages
	  also copied to the console.

	- Nodes with a "bindTime" outputOnly were not sending events correctly; fixed.

	- VRML/Classic - using SF* datatypes where MF* types were expected could lead to
	  invalid data being used - fixed.

	- OSX - use QuickTime/Quartz for image loading, rather than libraries supplied
	  in FeeeWRL dmg package.
 
	- Linux: XLib errors limited to 20; more than that FreeWRL exits. (ideally, no
	  XLib errors would occur; this is just to help in case of failures elsewhere)

For 1.20.1
	- Midi nodes - pan values were reversed. Fixed.

	- polyrep collision with high NavigationInfo speed not working 100%; some changes
	  made, but code still needs debugging.

	- "Sensitive" nature of sensitive nodes would flow up the scenegraph too far, now
	  code verifies that sensitive nodes are indeed registered; branches above sensitive
	  nodes ignored.

	- Collision equations for collision with Polyreps improved by having a quick check
	  to reduce testing on all triangles of distant shapes.

	- Frustum culling was not working on OSX computers - differences in OpenGL headers